case-01/app-db-deployment-ex-01/base/application/04-route-apps.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: famous-quotes
spec:
  host: cp.apps.ocp4.example.com
  port:
    targetPort: 8000
  to:
    kind: ""
    name: famous-quotes
    weight: null
status: {}
